# default_python_starter

./: .gitownrc  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot_pr.yml  lint_and_test.yml
