[tool.poetry]
name = "default-python-starter"
version = "1.0"
description = "Starter environment for python work"
authors = ["Michal Malyska <malyskamichal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line.length=120
